--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/joi": "^14.3.4",
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
+      "@types/jsonwebtoken": "^8.5.8",
       "typescript": "4.5.2"
    },
    "dependencies": {
@@ -19,6 +20,7 @@
       "dotenv": "^16.0.0",
       "express": "^4.18.1",
       "http-status-codes": "^2.2.0",
+      "jsonwebtoken": "^8.5.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "^0.2.41"
